--- a/unit1/1-05/index.html
+++ b/unit1/1-05/index.html
@@ -4,4 +4,14 @@
   <head>
     <meta charset="utf 8">
     <meta name="descripton" content="My first webpage with proper style">
-    
+    <meta name="keywords"content="trh, icd2o">
+    <meta name="author" content="Ms. Warriner">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first webpage, with proper style</title>
+  </head>
+  <style>
+    #my-header {
+        background-color: rgb(255, 165, 0);
+        color: hsl(147, 50%, 47%);
+        padding: 40px;
+        text-align: center;
