--- a/unit1/1-05/index.html
+++ b/unit1/1-05/index.html
@@ -8,19 +8,14 @@
     <meta name="author" content="Ms. Warriner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage, with proper style</title>
-  </head>
+  </head><link rel="stylesheet" href="./css/style.css">
   <style>
-    #my-header {
-        background-color: rgb(255, 165, 0);
-        color: hsl(147, 50%, 47%);
-        padding: 40px;
-        text-align: center;
-    }
-  <style>
-    <body style="backgroung-color : powderblue;">
+
+  </style>
+  <body style="background-color:powderblue;">
     <h1 id="my-header">Style is important</h1>
-    <p style="background-color:#ff00ff;">proper HTML style is important</p>
-    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <p style="background-color:#ff00ff;"><h1 HTML style is important</p>
+    <img src="/images/notebook-animation.svg" alt="html style guide">
     <p>
       <a href="./cities.html"My cities page</a>
     </p>
