--- a/unit1/1-05/index.html
+++ b/unit1/1-05/index.html
@@ -13,9 +13,9 @@
 
   </style>
   <body style="background-color:powderblue;">
-    <h1 id="my-header">Style is important</h1>
+    <h1 id="my-header">
     <p style="background-color:#ff00ff;"><h1 HTML style is important</p>
-    <img src="/images/notebook-animation.svg" alt="html style guide">
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
       <a href="./cities.html"My cities page</a>
     </p>
