--- a/unit1/1-07/index.html
+++ b/unit1/1-07/index.html
@@ -27,7 +27,7 @@
   <h1 id="myHeader">Brainrot Meanings</h1>
 <!-- Flat button with ripple -->
 <!-- Left aligned menu below button -->
-<button id="demo-show-toast" class="mdl-button mdl-js-button mdl-button--raised" type="button">Click for Aura</button>
+<button id="demo-show-toast" class="mdl-button mdl-js-button mdl-button--raised" type="button">Click for money</button>
 <div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar">
   <div class="mdl-snackbar__text"></div>
   <button class="mdl-snackbar__action" type="button"></button>
