--- a/unit1/1-04/1-08/index.html
+++ b/unit1/1-04/1-08/index.html
@@ -8,6 +8,10 @@
 <meta name="author" content="Ms. Warriner">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Brainrot meanings</title>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -45,7 +49,7 @@
     });
   }());
 </script>
-
+<link rel="icon" type ="image/png" href="./favicon/brainrot ai.webp">
 <!-- Simple Textfield -->
 <form action="#">
   <div class="mdl-textfield mdl-js-textfield">
