--- a/unit1/1-05/cites.html
+++ b/unit1/1-05/cites.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <!-- ICSD2O Unit 1-05 HTML Cities -->
 <html lang="en-ca">
-  <head></head>
-    <meta charset="utf-8">
+  <head>
+
+    <meta charset="utf 8">
     <meta name="description" content="My second webpage, with proper style">
     <meta name="keywords"content="TRH, ICD2O">
-    <meta name="author"content="Ms. Warriner">
+    <meta name="author"content="Cormac Kilbride">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citites</title>
-  </head>
-
+    </html>
   <style>
-    /* Style the element with the id "myHeader" */
+        /* Style the element with the id "myHeader" */
     #myHeader {
-      background-color: rgb(112, 179, 255);
-      color: Black;
-      padding: 40px;
-      text-align: center;
+    background-color: rgb(112, 179, 255);
+    color: Black;
+    padding: 40px;
+    text-align: center;
     }
-    /* Style all elements with the class name "city" */
+ /* Style all elements with the class name "city" */
+            /* Style the element with the id "myHeader" */
+        #myHeader {
+        background-color: rgb(112, 179, 255);
+        color: Black;
+        padding: 40px;
+        text-align: center;
+        }
+        /* Style all elements with the class name "city" */
     .city {
       background-color: tomato;
       color: white;
@@ -29,9 +37,26 @@
 <body style="background-color:rgb(75, 159, 255);">
   <!--An element with a unique id -->
     <h1 id="myHeader">Capital Cities</h1>
+    
+    </head> 
 
     <!-- Multiple element with same class -->
-    <h2 class="city>Ottawa</h2>
-    <p>Ottawa is the capital of Canada. </p>
-    <img src="./images/Flag_of_Canadd.svg.png"
-    
+    <h2>Ottawa <div class=""></h2>
+      <img src="./images/flag-of-Canada.png" alt="canada"
+      <p>Ottawa is the capital of Canada.</p>
+
+
+      <h2>london</h2>
+      <img src="./images/flag-of-United-Kingdom.png" alt="England"
+      <p> london is the capital of England.</p>
+
+
+      <h2>Paris</h2>
+      <img src="./images/flag-of-France.png"
+      <p> Paris is the capital of France.</p>
+
+
+      <h2>Vatican city</h2>
+      <img src="./images/flag-of-Italy.png"
+      <p> Vatican city is the capital of iltaly.</p>
+
