--- a/unit1/1-05/index.html
+++ b/unit1/1-05/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf 8">
     <meta name="descripton" content="My first webpage with proper style">
     <meta name="keywords"content="trh, icd2o">
-    <meta name="author" content="Ms. Warriner">
+    <meta name="author" content="Cormac kilbride">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage, with proper style</title>
   </head><link rel="stylesheet" href="./css/style.css">
