--- a/unit1/1-04/1-08/index.html
+++ b/unit1/1-04/1-08/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="Brainrot meanings">
 <meta name="keywords" content="TRH, ICD2O">
-<meta name="author" content="Ms. Warriner">
+<meta name="author" content="Cormac Kilbride">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Brainrot meanings</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
