--- a/unit1/1-07/index2.html
+++ b/unit1/1-07/index2.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="TRH, ICD2O">
 <meta name="author" content="Ms. Warriner">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Brainrot meanings</title>
+<title>Breaking bad characters</title>
 </head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -64,6 +64,4 @@
 <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="0" tabindex="0">
   <!-- Multiple element with same class -->
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<p>1%------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------100%</p>
-
 </body>
