--- a/unit1/final/index.html
+++ b/unit1/final/index.html
@@ -1,6 +1,45 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" href= "./style.css"
+<!-- Uses a transparent header that draws on top of the layout's background -->
+<style>
+.demo-layout-transparent {
+  background: url('../assets/demos/transparent.jpg') center / cover;
+}
+.demo-layout-transparent .mdl-layout__header,
+.demo-layout-transparent .mdl-layout__drawer-button {
+  /* This background is dark, so we set text to white. Use 87% black instead if
+     your background is light. */
+  color: white;
+}
+</style>
+
+<div class="demo-layout-transparent mdl-layout mdl-js-layout">
+  <header class="mdl-layout__header mdl-layout__header--transparent">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Nutrition Guide</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation -->
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="">1</a>
+        <a class="mdl-navigation__link" href="">2</a>
+        <a class="mdl-navigation__link" href="">3</a>
+      </nav>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Title</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="">https://verbose-space-waddle-x5qgr6r45qpj2w94-3000.app.github.dev/unit1/final/index.html?serverWindowId=cd2b2860-58f6-438f-964d-c61ae09495f7</a>
+      <a class="mdl-navigation__link" href="">https://verbose-space-waddle-x5qgr6r45qpj2w94-3000.app.github.dev/unit1/final/page.2.html?serverWindowId=c913325d-0041-45d0-b8f4-c7e5418a238d</a>
+      <a class="mdl-navigation__link" href="">https://verbose-space-waddle-x5qgr6r45qpj2w94-3000.app.github.dev/unit1/final/page.3.html?serverWindowId=af2591b8-c7a1-4606-8502-530efffe6839</a>
+    </nav>
+  </div>
+  <main class="mdl-layout__content">
+  </main>
+</div>
 
 <head>
 <meta charset="utf-8">
@@ -17,11 +56,17 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 </head>
-
+  <h1 id="myHeader">Nutrition Guide
+    <br>
 <style>
   /* Style the element with the id "myHeader" */
 </style>
 
-<body style="background-color:rgb(109, 197, 255);">
-  <!--An element with a unique id -->
-  <h1 id="myHeader">Nutrition Guide</h1>
+<body style="background-color:rgb(98, 111, 121);">
+
+  
+
+    <img src="./images/download.jpg" alt="food"
+     <br>
+  <p>welcome to my nutrition Guide</p>
+<br>
