--- a/unit1/final/page.2.html
+++ b/unit1/final/page.2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<body style="background-color:rgb(98, 111, 121);">
   <h1 id="myHeader">Top 5 Best snacks</h1>
 <p>best nutrious foods</p>
 </h2>
