--- a/unit1/final/index.html
+++ b/unit1/final/index.html
@@ -66,7 +66,7 @@
 
   
 
-    <img src="./images/download.jpg" alt="food"
+    <img src="./images/download.jpg" alt="food">
      <br>
   <p>welcome to my nutrition Guide</p>
 <br>
