--- a/unit1/final/page.3.html
+++ b/unit1/final/page.3.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<!-- Simple Textfield -->
+<form action="#">
+  <div class="mdl-textfield mdl-js-textfield">
+    <input class="mdl-textfield__input" type="text" id="sample1">
+    <label class="mdl-textfield__label" for="sample1">Text...</label>
+  </div>
+</form>
+<body style="background-color:rgb(98, 111, 121);">
+  </body>
