--- a/unit1/final/page.3.html
+++ b/unit1/final/page.3.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<body>
+  <h1>
+<p>learn more about nutrition!</p>
+</h1>
 <!-- Simple Textfield -->
 <form action="#">
   <div class="mdl-textfield mdl-js-textfield">
     <input class="mdl-textfield__input" type="text" id="sample1">
-    <label class="mdl-textfield__label" for="sample1">Text...</label>
+    <label class="mdl-textfield__label" for="sample1"></label>
   </div>
 </form>
 <body style="background-color:rgb(98, 111, 121);">
+  </body>
+  <img src="./images/download.jpg" alt="food">
   </body>
